# semantics-as-code

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: deploy-website.yml  validate.yml
cli/semantics/: __init__.py  __main__.py  cli.py
cli/semantics/adapters/: __init__.py  apache.py  base.py  bigquery.py  common.py  databricks.py  fabric.py  (+3 more)
docs/: DESIGN.md  FORMAL_SPECIFICATION.md  PRD.md  TASKS.md  WEBSITE_SOURCE_AUDIT.md  WEBSITE_TASKS.md  adapters.md  cli.md  examples.md  generators.md  specification.md  versioning.md
examples/retail/: README.md  semantics.yaml
examples/supply-chain/: README.md  semantics.yaml
schemas/: domain.schema.json  entity.schema.json  glossary-term.schema.json  metric.schema.json  quality-expectation.schema.json  relationship.schema.json  semantic-object.schema.json  semantic-package.schema.json
starter-kits/: README.md
starter-kits/supply-chain/: semantic-project.yaml
templates/: domain.yaml  entity.yaml  glossary-term.yaml  metric.yaml  quality-expectation.yaml  relationship.yaml  semantic-package.yaml
tests/compatibility/: test_v1_outputs.py
tests/integration/: test_adapters.py  test_supply_chain.py  test_vendor_outputs.py
tests/unit/: test_dependencies.py  test_diff.py  test_lint.py  test_registry.py  test_validation.py
vscode-extension/: language-configuration.json  package.json
vscode-extension/snippets/: semantics.code-snippets
website/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
website/public/: robots.txt
(+118 files in other folders)
